<resources>
    <string name="app_name">BnForm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="high_alert">High</string>
    <string name="moderate_alert">"Moderate "</string>
    <string name="low_alert">Low</string>
    <string name="placeholder">placeholder</string>
    <string name="titleText">Title</string>
    <string name="dateAndTime">Date and Time</string>
    <string name="description">Description</string>
    <string name="scan_icon_menu">Scan</string>
    <string name="alerts">Alerts</string>
    <string name="history">History</string>
    <string name="cd_close_button">Close</string>
    <string name="cd_settings_button">settings</string>
    <string name="cd_flash_button">Flash</string>

    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="no_camera_permission">Camera Permission was not granted</string>
    <string name="ok">OK</string>

    <!-- Strings for camera settings. -->
    <string name="pref_category_camera">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_title_rear_camera_preview_size">Rear camera preview size</string>

    <!-- Strings for object detection settings. -->
    <string name="pref_category_object_detection">Object detection</string>
    <string name="pref_key_object_detector_enable_multiple_objects" translatable="false">odemo</string>
    <string name="pref_title_object_detector_enable_multiple_objects">Enable multiple objects</string>
    <string name="pref_key_object_detector_enable_classification" translatable="false">odec</string>
    <string name="pref_title_object_detector_enable_classification">Enable classification</string>

    <!-- Strings for product search settings. -->
    <string name="pref_category_product_search">Product search</string>
    <string name="pref_key_enable_auto_search" translatable="false">pkeas</string>
    <string name="pref_title_enable_auto_search">Enable auto search</string>
    <string name="pref_key_confirmation_time_in_manual_search" translatable="false">ctims</string>
    <string name="pref_title_confirmation_time_in_manual_search">Confirmation time in manual search</string>
    <string name="pref_summary_confirmation_time_in_manual_search">Ranges from 100ms to 1000ms</string>
    <string name="pref_key_confirmation_time_in_auto_search" translatable="false">ctias</string>
    <string name="pref_title_confirmation_time_in_auto_search">Confirmation time in auto search</string>
    <string name="pref_summary_confirmation_time_in_auto_search">Ranges from 500ms to 2000ms</string>
    <string name="prompt_point_at_an_object">Point your camera at an object</string>
    <string name="prompt_point_at_a_barcode">Point your camera at a barcode</string>
    <string name="prompt_hold_camera_steady">Keep camera still for a moment</string>
    <string name="prompt_move_camera_closer">Move closer to search</string>
    <string name="prompt_searching">Searching&#8230;</string>
    <string name="product_search_button">Search Product</string>


    <!-- Strings for barcode detection settings. -->
    <string name="pref_category_barcode_detection">Barcode detection</string>
    <string name="pref_key_barcode_reticle_width" translatable="false">barcode_brw</string>
    <string name="pref_title_barcode_reticle_width">Barcode reticle width</string>
    <string name="pref_summary_barcode_reticle_width" formatted="false">Relative to the camera view width, ranges from 50% to 95%</string>
    <string name="pref_key_barcode_reticle_height" translatable="false">barcode_brh</string>
    <string name="pref_title_barcode_reticle_height">Barcode reticle height</string>
    <string name="pref_summary_barcode_reticle_height" formatted="false">Relative to the camera view height, ranges from 20% to 80%</string>
    <string name="pref_key_enable_barcode_size_check" translatable="false">barcode_ebsc</string>
    <string name="pref_title_enable_barcode_size_check">Enable barcode size check</string>
    <string name="pref_summary_enable_barcode_size_check">Will prompt user to move camera closer if the detected barcode is too small</string>
    <string name="pref_key_minimum_barcode_width" translatable="false">barcode_mbw</string>
    <string name="pref_title_minimum_barcode_width">Minimum barcode width</string>
    <string name="pref_summary_minimum_barcode_width" formatted="false">Relative to the reticle width, ranges from 20% to 80% (only applicable when barcode size check enabled)</string>
    <string name="pref_key_delay_loading_barcode_result" translatable="false">barcode_dlbr</string>
    <string name="pref_title_delay_loading_barcode_result">Delay loading barcode result</string>
    <string name="pref_summary_delay_loading_barcode_result">Will show the loading spinner for 2s</string>
    <string name="share">Share</string>
    <string name="recall_label">Recall Number</string>
    <string name="units_sold_label">Items Sold:</string>
    <string name="recall_image">Recall Image</string>
    <string name="recall_details">Product Details</string>
    <string name="live_scan">Scan Product</string>
    <string name="click_to_share">Share</string>
    <string name="appwidget_text">Alerts</string>
    <string name="add_widget">Add widget</string>
    <string name="no_data_available">No Data Available</string>
    <string name="recall_number">Recall Number:</string>
    <string name="recall_last_date_published">Last Date Published:</string>
    <string name="recall_items">Products</string>
    <string name="recall_units">Units Sold:</string>
    <string name="fab_btn_text">Share</string>
    <string name="shareContent">ShareScreenContent</string>
    <string name="viewproduct">ViewProductDetail</string>
    <string name="scanned">ProductScanned</string>
    <string name="product_upc">Product UPC Number</string>
    <string name="mime_type">text/plain</string>
    <string name="contact_info">Contact Information</string>
    <string name="happy_emoji">Product Safe</string>
    <string name="sad_emoji">On Recall</string>
    <string name="login_fragment">Recall Information</string>
    <string name="email">Email Address</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">752692378651850</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb752692378651850</string>
    <string name="facebook_app_id">752692378651850</string>
    <string name="fb_login_protocol_scheme">fb752692378651850</string>
    <string name="no_network">No Network Available</string>
    <string name="sign_out">Successful Logged Out</string>
    <string name="menu_signout">Sign Out</string>
    <string name="login_name">login name</string>
    <string name="login_cancel">Login Cancel</string>


    <string name="camera_permisson_requested">Camera Permission is needed to Scan Bar/QR Code
    </string>
    <string name="menu_news">Recall News</string>
</resources>