<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single"
        android:visible="true">
        <item
            android:id="@+id/lowAlertFragment"
            android:title="@string/alerts"
            android:icon="@drawable/icon_alert_drawer"
            />
        <item
            android:id="@+id/liveScanFragment"
            android:title="@string/live_scan"
            android:icon="@drawable/icon_barcodefinder"
            />

        <item
            android:id="@+id/newsForum"
            android:title="@string/menu_news"
            android:icon="@drawable/icon_news_drawer"
            android:onClick="openWebPage"
            />
    </group>


</menu>