<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:background="@drawable/action_bar_scrim"
        android:paddingStart="@dimen/top_action_bar_padding_horizontal"
        android:paddingEnd="@dimen/top_action_bar_padding_horizontal">

        <ImageView
            android:id="@+id/close_button"
            android:layout_width="68dp"
            android:layout_height="63dp"
            android:layout_gravity="start"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            android:contentDescription="@string/cd_close_button"
            android:padding="@dimen/top_action_button_padding"
            app:layout_constraintEnd_toStartOf="@+id/flash_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/cancel_btn" />

        <ImageView
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/cd_settings_button"
            android:padding="@dimen/top_action_button_padding"
            app:layout_constraintStart_toEndOf="@+id/flash_button"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/settings_btn" />

        <ImageView
            android:id="@+id/flash_button"
            android:layout_width="93dp"
            android:layout_height="62dp"
            android:layout_gravity="center_horizontal"
            android:outlineAmbientShadowColor="@color/white"
            android:layout_marginStart="32dp"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/cd_flash_button"
            android:padding="@dimen/top_action_button_padding"
            app:layout_constraintStart_toEndOf="@+id/close_button"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/flash_camera" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>