<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/barcode_bottom_sheet_padding_vertical"
    android:paddingBottom="@dimen/barcode_bottom_sheet_padding_vertical"
    android:background="@color/white"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_bottom_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/share"
            android:src="@drawable/ic_round_share_24"
            app:elevation="6dp"
            app:fabSize="normal"
            app:layout_anchorGravity="top|right"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:pressedTranslationZ="12dp" />

        <ImageView
            android:id="@+id/happy_emoji"
            android:layout_width="84dp"
            android:layout_height="83dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:src="@mipmap/ic_happy_emoji_foreground"
            android:contentDescription="@string/happy_emoji"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sad_emoji"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/sad_emoji"
            android:layout_width="89dp"
            android:layout_height="82dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/sad_emoji"
            android:gravity="end"
            android:src="@mipmap/ic_sad_emoji_foreground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/barcode_field_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"/>

</LinearLayout>
</layout>
