<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragments.RecallDetailFragment">
    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">


            <ImageView
                android:id="@+id/image_detail_id"
                android:layout_width="157dp"
                android:layout_height="198dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/recall_image"
                app:layout_constraintBottom_toTopOf="@+id/guideline10"
                app:layout_constraintEnd_toStartOf="@+id/recall_label"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toTopOf="@+id/guideline2"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/description_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:autoSizeTextType="uniform"
                android:text="@string/hello_blank_fragment"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline10"
                app:layout_constraintVertical_bias="1.0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="192dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="395dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="246dp" />

            <TextView
                android:id="@+id/recall_label"
                android:layout_width="145dp"
                android:layout_height="42dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/recall_label"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@+id/unit_sold_id" />

            <TextView
                android:id="@+id/unit_sold_label"
                android:layout_width="121dp"
                android:layout_height="37dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/units_sold_label"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toTopOf="@+id/guideline2" />

            <TextView
                android:id="@+id/unit_sold_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline9"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@+id/unit_sold_label" />

            <TextView
                android:id="@+id/recall_id"
                android:layout_width="137dp"
                android:layout_height="36dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@+id/recall_label" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>